# LLM_Nature_Indention_Compensation

./: .gitignore  README.md  pyproject.toml
.bak_core_split/: hf_kernel.py.20260201_042238  token_gen.py.20260201_042238
scripts/: run_demo.sh
src/llm_nature_indention_compensation/: __init__.py  __main__.py  evaluate.py  hashing.py  hf_demo.py  hf_kernel.py  indent_controller.py  kernel_core.py  numerics.py  repair.py  run.py  token_gen.py  token_gen.py.bak  ui.py  verify.py
tests/: test_controller.py  test_numerics.py  test_repair.py  test_repair.py.bak
