[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-nature-indention-compensation"
version = "0.1.0"
description = "Token-level newline-boundary indentation constraints + compiler-guided repair for Python codegen (GPT-2 demo)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "transformers>=4.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
